Git commit message 2 for SAP UI5 Walkthrough

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,7 @@ html[dir="rtl"] .myAppDemoWalkthrough .myCustomButton.sapMBtn {
     display: inline-block;
     font-weight: bold;
 }
+
+.invoice-table{
+    font-weight: bold;
+}
