--- a/view/HelloPanel.view.xml
+++ b/view/HelloPanel.view.xml
@@ -7,6 +7,12 @@
            width="auto">
 
               <content>
+                     <Button id="helloDialogButton"
+                             icon="sap-icon://world"
+                             text="{i18n>openDialogButtonText}"
+                             press=".onOpenDialog"
+                             class="sapUiSmallMarginEnd"/>
+                             
                      <Button text ="{i18n>showHelloButtonText}"
                             press =".onShowHello"
                             class = "smyCustomButton"/>      
@@ -14,11 +20,11 @@
      <!-- note the space in Input > descrption-->
 
                      <Input value = "{/recipient/name}"
-                            description="Hello {/recipient/name }" 
+                            description="Hello, {/recipient/name}" 
                             valueLiveUpdate="true"
                             width = "60%"/>
 
-                     <FormattedText  htmlText = "Hello {/recipient/name}"
+                     <FormattedText  htmlText = "Hello, {/recipient/name}"
                             class = "sapUiSmallMargin sapThemeHighlight-asColor myCustomText" />
                          
               </content>
